<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="E_CRYO_SENSOR_TYPE_TEMP" Id="{9e64b8cb-2d4c-4a5c-ae31-107b231713a6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CRYO_SENSOR_TYPE_TEMP :
(
	NONE 	:= 0,
	PT100	:= 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>