<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="T_CRYO_PT100_OHM2C_REC" Id="{e3966bb5-ca3f-4f78-947c-0961d658aa49}">
    <Declaration><![CDATA[TYPE T_CRYO_PT100_OHM2C_REC :
STRUCT
	celsius:	LREAL;	// Temperature in celsius [C]
	ohm:		LREAL;	// Resistance in [Ohm]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>