<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="T_CRYO_SENSOR_STATUS_TEMP" Id="{fc2984a1-c3e7-436a-be7c-3191a0fdc93e}">
    <Declaration><![CDATA[TYPE T_CRYO_SENSOR_STATUS_TEMP EXTENDS T_CRYO_SENSOR_STATUS :
STRUCT
	nType:		E_CRYO_SENSOR_TYPE_TEMP;
	
	lrRamp:		LREAL;	// Temperature ramp [deg/min]
	lrTempC:	LREAL;	// Temperature in deg C
	lrTempK:	LREAL;	// Temperature in deg K
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>